# parachain

./: Cargo.toml
node/: Cargo.toml
node/res/: darwinia-pc1.json
node/src/: chain_spec.rs  command.rs
pallets/parachain-info/: Cargo.toml
pallets/token-dealer/: Cargo.toml
res/: darwinia-redirect.hex  darwinia-redirect.json  darwinia-redirect.wasm
runtime/: Cargo.toml
runtime/darwinia-redirect/src/: lib.rs
runtime/src/: lib.rs
src/chain_spec/: darwinia_redirect.rs
